k8sFlask/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: flask
  labels:
    app: flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: ghcr.io/rana-ex98/flask:latest
        ports: 
        - name: http
          containerPort: 5000
        imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: linux
