k8sFlask/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask
  namespace: flask
spec:
  ingressClassName: nginx
  rules:
  - host: flask.openlcm.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask
            port:
              number: 5000
